# danmu-api-android

./: .gitignore  README.md  README.md.bak  gradle.properties  gradlew  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/nodejs-project/: android-server.js  android-server.mjs  main.js  package-lock.json  package.json  startup-failure.js  startup-failure.mjs  worker-proxy.js  worker-proxy.mjs
app/src/main/cpp/: native-lib.cpp
app/src/main/res/color/: btn_danger_container.xml  btn_danger_content.xml  btn_outlined_content.xml  btn_outlined_ripple.xml  btn_outlined_stroke.xml  btn_primary_container.xml  btn_primary_content.xml  btn_tonal_container.xml  btn_tonal_content.xml  btn_toolbar_icon_tint.xml
app/src/main/res/drawable/: bg_action_primary.xml  bg_appbar.xml  bg_bottom_sheet.xml  bg_card.xml  bg_dialog.xml  bg_icon_container.xml  bg_info_banner.xml  bg_main.xml  bg_main_gradient.xml  bg_pill.xml  bg_popup_menu.xml  bg_sheet.xml  bg_sheet_handle.xml  bg_status.xml  bg_url_container.xml  compat_button_danger.xml  compat_button_primary.xml  compat_button_secondary.xml  compat_card_hero.xml  compat_card_panel.xml  compat_edittext_background.xml  compat_qr_surface.xml  compat_tile_background.xml  compat_window_background.xml  ic_battery_24.xml  ic_check_24.xml  ic_chevron_right_24.xml  ic_close_24.xml  ic_hourglass_24.xml  ic_info_24.xml  ic_key_24.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  (+12 more)
app/src/main/res/drawable-night/: bg_main.xml  bg_main_gradient.xml
(+337 files in other folders)
